--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 </head>
 <body>
 
-    <div class="content">
-
+    <div class="container">
+        <div class="split-left">
+            <h1>Coke</h1>
+            <a href="#" class="btn">Compare</a>
+        </div>
+        <div class="split-right">
+            <h1>Pepsi</h1>
+            <a href="#" class="btn">Compare</a>
+        </div>
     </div>
 
     <script src="script.js"></script>
