Overhauled the html and css.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
 
     <div class="container">
-        <div class="split-left">
-            <h1>Coke</h1>
-            <a href="#" class="btn">Compare</a>
+        <div class="split left">
+          <h1>Coke</h1>
+          <a href="#" class="btn">Buy Now</a>
         </div>
-        <div class="split-right">
-            <h1>Pepsi</h1>
-            <a href="#" class="btn">Compare</a>
+        <div class="split right">
+          <h1>Pepsi</h1>
+          <a href="#" class="btn">Buy Now</a>
         </div>
-    </div>
+      </div>
 
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
